k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fresh-bonds
  labels:
    name: fresh-bonds
